; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_usrreq.c_uipc_abort.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_uipc_usrreq.c_uipc_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.unpcb = type { %struct.unpcb* }

@.str = private unnamed_addr constant [24 x i8] c"uipc_abort: unp == NULL\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket*)* @uipc_abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uipc_abort(%struct.socket* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.unpcb*, align 8
  %4 = alloca %struct.unpcb*, align 8
  store %struct.socket* %0, %struct.socket** %2, align 8
  %5 = load %struct.socket*, %struct.socket** %2, align 8
  %6 = call %struct.unpcb* @sotounpcb(%struct.socket* %5)
  store %struct.unpcb* %6, %struct.unpcb** %3, align 8
  %7 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %8 = icmp ne %struct.unpcb* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @KASSERT(i32 %9, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %12 = call i32 @UNP_PCB_UNLOCK_ASSERT(%struct.unpcb* %11)
  %13 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %14 = call i32 @UNP_PCB_LOCK(%struct.unpcb* %13)
  %15 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %16 = getelementptr inbounds %struct.unpcb, %struct.unpcb* %15, i32 0, i32 0
  %17 = load %struct.unpcb*, %struct.unpcb** %16, align 8
  store %struct.unpcb* %17, %struct.unpcb** %4, align 8
  %18 = load %struct.unpcb*, %struct.unpcb** %4, align 8
  %19 = icmp ne %struct.unpcb* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %1
  %21 = load %struct.unpcb*, %struct.unpcb** %4, align 8
  %22 = call i32 @unp_pcb_hold(%struct.unpcb* %21)
  %23 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %24 = call i32 @UNP_PCB_UNLOCK(%struct.unpcb* %23)
  %25 = load %struct.unpcb*, %struct.unpcb** %4, align 8
  %26 = call i32 @unp_drop(%struct.unpcb* %25)
  br label %30

27:                                               ; preds = %1
  %28 = load %struct.unpcb*, %struct.unpcb** %3, align 8
  %29 = call i32 @UNP_PCB_UNLOCK(%struct.unpcb* %28)
  br label %30

30:                                               ; preds = %27, %20
  ret void
}

declare dso_local %struct.unpcb* @sotounpcb(%struct.socket*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @UNP_PCB_UNLOCK_ASSERT(%struct.unpcb*) #1

declare dso_local i32 @UNP_PCB_LOCK(%struct.unpcb*) #1

declare dso_local i32 @unp_pcb_hold(%struct.unpcb*) #1

declare dso_local i32 @UNP_PCB_UNLOCK(%struct.unpcb*) #1

declare dso_local i32 @unp_drop(%struct.unpcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
